rnsc/test_data/integration/error/parser/type_hints/methodref/no_operand_2.rns
.class   @methodref className
.super java/lang/Object